src/tests/test-src/errors/E24-redeclare-fn.syntran
// E24: redeclare-fn
// A function was declared twice

fn f(): i32
{
	return 1;
}

fn f(): i32
{
	return 2;
}
